<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Syncthing</string>
    <string name="app_description">An open, trustworthy and decentralized file synchronization application.</string>
    <string name="welcome_title">Welcome to Syncthing for Android</string>
    <string name="welcome_text">Syncthing is an open-source file synchronization application.\n\
To share data with other devices, you need to add their unique device IDs to the device list. Afterwards you can select which folders to share with which devices.\n\
Please report any problems you encounter via Github.</string>
    <string name="cont">Continue</string>
    <string name="add_folder">Add Folder</string>
    <string name="share_device_id">Share Device ID</string>
    <string name="send_device_id_to">Send Device ID to</string>
    <string name="usage_reporting_dialog_title">Allow Anonymous Usage Reporting?</string>
    <string name="usage_reporting_dialog_description">The encrypted usage report is sent daily. It is used to track common platforms, folder sizes and app versions. If the reported data set is changed you will be prompted with this dialog again.\n\nThe aggregated statistics are publicly available at https://data.syncthing.net.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_website">Open Website</string>
    <string name="toast_write_storage_permission_required">Write storage permission is required for this app</string>
    <string name="device_rejected">Device %1$s wants to connect</string>
    <string name="folder_rejected">Device %1$s wants to share folder %2$s</string>
    <string name="dialog_disable_battery_optimization_title">Battery Optimization</string>
    <string name="dialog_disable_battery_optimization_message">Android may stop synchronization after some time. To prevent this, turn off battery optimization.\n\nSome devices have additional task-killing apps preinstalled. You should add Syncthing to their whitelist, as well.</string>
    <string name="dialog_disable_battery_optimization_later">Later</string>
    <string name="dialog_disable_battery_optimization_dont_show_again">Don\'t show again</string>
    <string name="dialog_disable_battery_optimization_turn_off">Turn off for Syncthing</string>
    <string name="dialog_disable_battery_optimizations_not_supported">Your device does not support disabling battery optimizations</string>
    <string name="api_loading">Loading&#8230;</string>
    <string name="web_gui_creating_key">Generating secure keys. This may take a few minutes.</string>
    <string name="syncthing_loading_slow_message">Syncthing is taking very long to load. Use the logs to check for any errors.</string>
    <string name="folders_fragment_title">Folders</string>
    <string name="folder_list_empty">No folders found</string>
    <plurals name="files">
        <item quantity="one">%1$d / %2$d File</item>
        <item quantity="other">%1$d / %2$d Files</item>
    </plurals>
    <string name="toast_no_file_manager">No compatible file manager found</string>
    <string name="devices_fragment_title">Devices</string>
    <string name="devices_list_empty">No devices found</string>
    <string name="device_up_to_date">Up to Date</string>
    <string name="device_syncing">Syncing (%1$d%%)</string>
    <string name="device_disconnected">Disconnected</string>
    <string name="download_title">Download</string>
    <string name="upload_title">Upload</string>
    <string name="download_title_colon">Download:\u0020</string>
    <string name="upload_title_colon">Upload:\u0020</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="announce_server">Announce Server</string>
    <string name="restart">Restart</string>
    <string name="dialog_confirm_restart">Do you want to restart Syncthing?</string>
    <string name="folder_id">Folder ID</string>
    <string name="folder_label">Folder Label</string>
    <string name="directory">Directory</string>
    <string name="folder_master">Send Only</string>
    <string name="devices">Devices</string>
    <string name="keep_versions">Keep Versions</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="create_folder">Create Folder</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="create">Create</string>
    <string name="remove_folder_confirm">Do you really want to remove this folder from Syncthing?</string>
    <string name="folder_id_required">The folder ID must not be empty</string>
    <string name="folder_path_required">The folder path must not be empty</string>
    <string name="dialog_discard_changes">Discard your changes?</string>
    <string name="ignore_patterns">Ignore Patterns</string>
    <string name="create_ignore_file_error">Failed to create ignore file. Is the directory writable?</string>
    <string name="edit_ignore_file_error">No text editor found</string>
    <string name="device_id">Device ID</string>
    <string name="name">Name</string>
    <string name="addresses">Addresses</string>
    <string name="current_address">Current Address</string>
    <string name="compression">Compression</string>
    <string-array name="compress_entries">
        <item>Never</item>
        <item>Metadata</item>
        <item>Always</item>
    </string-array>
    <string name="introducer">Introducer</string>
    <string name="delete_device">Delete Device</string>
    <string name="add_device">Add Device</string>
    <string name="add">Add</string>
    <string name="edit_device">Edit Device</string>
    <string name="remove_device_confirm">Do you really want to remove this device?</string>
    <string name="device_id_required">The device ID must not be empty</string>
    <string name="scan_qr_code_description">Scan QR Code</string>
    <string name="toast_root_denied">Did not get root permissions</string>
    <string name="web_gui_title">Web GUI</string>
    <string name="web_gui_loading">Waiting for GUI</string>
    <string name="settings_title">Settings</string>
    <string name="category_run_conditions">Run Conditions</string>
    <string name="category_behaviour">Behaviour</string>
    <string name="category_syncthing_options">Syncthing Options</string>
    <string name="category_backup">Backup</string>
    <string name="category_debug">Debug</string>
    <string name="category_experimental">Experimental</string>
    <string name="always_run_in_background">Always run in background</string>
    <string name="always_run_in_background_enabled">Syncthing always runs in the background, according to preferences below.</string>
    <string name="sync_only_charging">Run only when charging</string>
    <string name="sync_only_wifi">Run only on wifi</string>
    <string name="sync_only_wifi_ssids">Restrict to certain wifi networks</string>
    <string name="respect_battery_saving_title">Respect Android battery saving setting</string>
    <string name="respect_battery_saving_summary">Disable Syncthing if battery saving is active</string>
    <string name="advanced_folder_picker">Use advanced Folder Picker</string>
    <string name="advanced_folder_picker_summary">Select any folder on the device for syncing</string>
    <string name="use_root_title">Run Syncthing as Superuser</string>
    <string name="use_root_summary">This is an unstable feature that may cause problems with Syncthing and with your device. If you encounter problems, you may have to reinstall Syncthing.</string>
    <string name="notification_type_title">Notification</string>
    <string name="notification_type_summary">Choose the notification type</string>
    <string name="preference_language_title">Language</string>
    <string name="preference_language_summary">Change the app language</string>
    <string name="start_into_web_gui_title">Start directly into web GUI</string>
    <string name="start_into_web_gui_summary">When starting the app, open web GUI instead of the main screen</string>
    <string name="device_name">Device Name</string>
    <string name="listen_address">Sync Protocol Listen Addresses</string>
    <string name="max_recv_kbps">Incoming Rate Limit (KiB/s)</string>
    <string name="max_send_kbps">Outgoing Rate Limit (KiB/s)</string>
    <string name="global_announce_enabled">Global Discovery</string>
    <string name="local_announce_enabled">Local Discovery</string>
    <string name="enable_nat_traversal">Enable NAT Traversal</string>
    <string name="global_announce_server">Global Discovery Servers</string>
    <string name="enable_relaying">Enable Relaying</string>
    <string name="usage_reporting">Anonymous Usage Reporting</string>
    <string name="gui_address">GUI Listen Addresses</string>
    <string name="export_config">Export Configuration</string>
    <string name="keep_wakelock_while_binary_running">Keep the CPU awake while Syncthing is running</string>
    <string name="keep_wakelock_while_binary_running_summary">Use this setting if you experience unexpected disconnects while operating on battery. This will result in increased battery consumption.</string>
    <string name="use_tor_title">Use Tor</string>
    <string name="use_tor_summary">Force all traffic through Tor for increased privacy. Requires Orbot</string>
    <string name="use_legacy_hashing_title">Use legacy hashing</string>
    <string name="use_legacy_hashing_summary">Force Syncthing to use legacy hashing package for compatibility purposes</string>
    <string name="import_config">Import Configuration</string>
    <string name="sttrace_title">STTRACE Options</string>
    <string name="environment_variables">Environment variables</string>
    <string name="category_about">About</string>
    <string name="open_log">Open Log</string>
    <string name="open_log_summary">Open the Syncthing and Android log window</string>
    <string name="notify_crashes_title">Notify about Syncthing crashes</string>
    <string name="notify_crashes_summary">Show a notification whenever a Syncthing crash is detected</string>
    <string name="syncthing_forum_title">Syncthing Forum</string>
    <string name="syncthing_forum_summary">Go to the Syncthing Forum</string>
    <string name="syncthing_forum_url" translatable="false">https://forum.syncthing.net/</string>
    <string name="report_issue_title">Report Issue</string>
    <string name="report_issue_summary">Open the Syncthing-Android issue tracker</string>
    <string name="issue_tracker_url" translatable="false">https://github.com/syncthing/syncthing-android/issues</string>
    <string name="donate_title">Donate</string>
    <string name="donate_summary">Help us pay for domains and hosting fees</string>
    <string name="donate_url" translatable="false">https://syncthing.net/#donate</string>
    <string name="syncthing_version_title">Syncthing Version</string>
    <string name="app_version_title">Syncthing-Android Version</string>
    <string name="exit">Exit</string>
    <string name="maximum_age">Maximum Age</string>
    <string name="versions_path">Versions Path</string>
    <string name="staggered_versioning_description">Files are moved to date stamped versions in a .stversions directory when replaced or deleted by Syncthing. Versions are automatically deleted if they are older than the maximum age or exceed the number of files allowed in an interval.\n\nThe following intervals are used: for the first hour a version is kept every 30 seconds, for the first day a version is kept every hour, for the first 30 days a version is kept every day, until the maximum age a version is kept every week.</string>
    <string name="maximum_age_description">The maximum time to keep a version (in days, set to 0 to keep versions forever).</string>
    <string name="versions_path_description">Path where versions should be stored (leave empty for the default .stversions directory in the shared folder).</string>
</resources>