<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:title="@string/category_run_conditions"
        android:key="category_run_conditions">

        <CheckBoxPreference
            android:key="always_run_in_background"
            android:title="@string/always_run_in_background"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="sync_only_charging"
            android:title="@string/sync_only_charging"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="sync_only_wifi"
            android:title="@string/sync_only_wifi"
            android:defaultValue="false" />

        <com.nutomic.syncthingandroid.views.WifiSsidPreference
            android:key="sync_only_wifi_ssids_set"
            android:title="@string/sync_only_wifi_ssids" />

        <CheckBoxPreference
            android:key="respect_battery_saving"
            android:title="@string/respect_battery_saving_title"
            android:summary="@string/respect_battery_saving_summary"
            android:defaultValue="true" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="category_behaviour"
        android:title="@string/category_behaviour">

        <CheckBoxPreference
            android:key="advanced_folder_picker"
            android:title="@string/advanced_folder_picker"
            android:summary="@string/advanced_folder_picker_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="notification_type"
            android:title="@string/notification_type_title"
            android:entryValues="@array/notification_type_entry_values"
            android:entries="@array/notification_type_entries"
            android:summary="@string/notification_type_summary"
            android:defaultValue="low_priority" />

        <ListPreference
            android:key="pref_current_language"
            android:title="@string/preference_language_title"
            android:summary="@string/preference_language_summary" />

        <CheckBoxPreference
            android:key="start_into_web_gui"
            android:title="@string/start_into_web_gui_title"
            android:summary="@string/start_into_web_gui_summary"
            android:defaultValue="false"/>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="category_syncthing_options"
        android:title="@string/category_syncthing_options">

        <EditTextPreference
            android:key="deviceName"
            android:title="@string/device_name"
            android:persistent="false"
            android:inputType="textCapWords" />

        <EditTextPreference
            android:key="listenAddresses"
            android:title="@string/listen_address"
            android:persistent="false"
            android:inputType="textNoSuggestions" />

        <EditTextPreference
            android:key="maxRecvKbps"
            android:title="@string/max_recv_kbps"
            android:numeric="integer"
            android:persistent="false"
            android:inputType="number" />

        <EditTextPreference
            android:key="maxSendKbps"
            android:title="@string/max_send_kbps"
            android:numeric="integer"
            android:persistent="false"
            android:inputType="number" />

        <CheckBoxPreference
            android:key="natEnabled"
            android:title="@string/enable_nat_traversal"
            android:persistent="false"/>

        <CheckBoxPreference
            android:key="localAnnounceEnabled"
            android:title="@string/local_announce_enabled"
            android:persistent="false" />

        <CheckBoxPreference
            android:key="globalAnnounceEnabled"
            android:title="@string/global_announce_enabled"
            android:persistent="false" />

        <CheckBoxPreference
            android:key="relaysEnabled"
            android:title="@string/enable_relaying"
            android:persistent="false" />

        <EditTextPreference
            android:key="globalAnnounceServers"
            android:title="@string/global_announce_server"
            android:persistent="false"
            android:inputType="textNoSuggestions" />

        <EditTextPreference
            android:key="address"
            android:title="@string/gui_address"
            android:persistent="false"
            android:inputType="textNoSuggestions" />

        <CheckBoxPreference
            android:key="urAccepted"
            android:title="@string/usage_reporting"
            android:persistent="false" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="category_backup"
        android:title="@string/category_backup">

        <Preference
            android:key="export_config"
            android:title="@string/export_config" />

        <Preference
            android:key="import_config"
            android:title="@string/import_config" />

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/category_debug">

        <Preference
            android:title="@string/open_log"
            android:summary="@string/open_log_summary">
            <intent
                android:action=".activities.LogActivity" />
        </Preference>

        <CheckBoxPreference
            android:key="notify_crashes"
            android:title="@string/notify_crashes_title"
            android:summary="@string/notify_crashes_summary"/>

        <EditTextPreference
            android:key="sttrace"
            android:title="@string/sttrace_title"
            android:singleLine="true"
            android:inputType="textNoSuggestions"/>

        <EditTextPreference
            android:key="environment_variables"
            android:title="@string/environment_variables"
            android:singleLine="true"
            android:inputType="textNoSuggestions"/>

        <Preference
            android:key="st_reset_database"
            android:title="@string/st_reset_database_title"
            android:singleLine="true" />

        <Preference
            android:key="st_reset_deltas"
            android:title="@string/st_reset_deltas_title"
            android:singleLine="true" />

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/category_experimental"
        android:key="category_experimental">

        <CheckBoxPreference
            android:key="use_root"
            android:title="@string/use_root_title"
            android:summary="@string/use_root_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="wakelock_while_binary_running"
            android:title="@string/keep_wakelock_while_binary_running"
            android:summary="@string/keep_wakelock_while_binary_running_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="use_tor"
            android:title="@string/use_tor_title"
            android:summary="@string/use_tor_summary" />

        <CheckBoxPreference
            android:key="use_legacy_hashing"
            android:title="@string/use_legacy_hashing_title"
            android:summary="@string/use_legacy_hashing_summary" />

    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/category_about">

        <Preference
            android:title="@string/syncthing_forum_title"
            android:summary="@string/syncthing_forum_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/syncthing_forum_url" />
        </Preference>

        <Preference
            android:title="@string/report_issue_title"
            android:summary="@string/report_issue_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/issue_tracker_url" />
        </Preference>

        <Preference
            android:title="@string/donate_title"
            android:summary="@string/donate_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/donate_url" />
        </Preference>

        <Preference
            android:key="syncthing_version"
            android:title="@string/syncthing_version_title" />

        <Preference
            android:key="app_version"
            android:title="@string/app_version_title" />

    </PreferenceScreen>

</PreferenceScreen>
