<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false">

    <Preference
        android:key="device_id"
        android:title="@string/device_id" />

    <EditTextPreference
        android:key="name"
        android:title="@string/name" />

    <EditTextPreference
        android:key="addresses"
        android:title="@string/addresses" />

    <CheckBoxPreference
        android:key="compression"
        android:title="@string/compression" />

    <CheckBoxPreference
        android:key="introducer"
        android:title="@string/introducer" />

    <Preference
        android:key="version"
        android:title="@string/syncthing_version_title"
        style="?android:preferenceInformationStyle" />

    <Preference
        android:key="current_address"
        android:title="@string/current_address"
        style="?android:preferenceInformationStyle" />

</PreferenceScreen>
