<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_device_id"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_device_id"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_folder"
        android:title="@string/add_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_device"
        android:title="@string/add_device"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/web_gui"
        android:title="@string/web_gui_title" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings_title" />

    <item
        android:id="@+id/exit"
        android:title="@string/exit" />

</menu>
