<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false">

    <EditTextPreference
        android:key="folder_id"
        android:title="@string/folder_id"
        android:enabled="false"
        style="?android:preferenceInformationStyle" />

    <Preference
        android:key="directory"
        android:title="@string/directory"
        android:enabled="false"
        style="?android:preferenceInformationStyle" />

    <EditTextPreference
        android:key="rescan_interval"
        android:title="@string/rescan_interval"
        android:inputType="numberDecimal" />

    <CheckBoxPreference
        android:key="folder_master"
        android:title="@string/folder_master" />

    <PreferenceScreen
        android:key="devices"
        android:title="@string/devices" />

    <CheckBoxPreference
        android:key="versioning"
        android:title="File Versioning" />

    <EditTextPreference
        android:key="versioning_keep"
        android:title="@string/keep_versions"
        android:inputType="numberDecimal" />

</PreferenceScreen>
