<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:padding="10dip"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView
				android:id="@+id/node_id_title"
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

		<TextView
				android:id="@+id/node_id"
				android:lines="1"
				android:ellipsize="end"
				android:layout_below="@id/node_id_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<TextView
			android:id="@+id/cpu_usage_title"
			android:text="@string/cpu_usage"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/cpu_usage"
			android:layout_alignBottom="@id/cpu_usage_title"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<TextView
			android:id="@+id/ram_usage_title"
			android:text="@string/ram_usage"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/ram_usage"
			android:layout_alignBottom="@id/ram_usage_title"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<TextView
			android:id="@+id/download_title"
			android:text="@string/download_title"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/download"
			android:layout_alignBottom="@id/download_title"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<TextView
			android:id="@+id/upload_title"
			android:text="@string/upload_title"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/upload"
			android:layout_alignBottom="@id/upload_title"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<TextView
			android:id="@+id/announce_server_title"
			android:text="@string/announce_server"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/announce_server"
			android:layout_alignBottom="@id/announce_server_title"
			android:layout_alignParentRight="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</RelativeLayout>

</LinearLayout>